--- a/app/ReactApp/package.json
+++ b/app/ReactApp/package.json
@@ -9,7 +9,9 @@
     "ag-grid-community": "^26.1.0",
     "ag-grid-react": "^26.1.0",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
